2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Fix for bug #33858.
	* include/avr/power.h: Add condition for _AVR_ATmega328_.
	* NEWS: Add to fixed bug list.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Fix for bug #33920.
	* include/avr/iotn167.h (ICR): Define ICR to be a word register.
	* NEWS: Add to fixed bug list.

2011-09-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (avr_libc_revision, avr_libc_reldate): Bump in
	preparation of an 1.7.2rc.
	* configure.ac (avr_libc_revision_suffix): New macro.

2011-09-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #34047: missing math.h include in delay.h
	* util/delay.h.in: include <math.h>

2011-09-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* util/delay.h.in: Fall back to the historic algorithm when
	compiling within a freestanding environment.

2011-05-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Heike C. Zimmerer:
	patch #7362: iom16a.h: USART vectors inconsistently named
	for ATmega16A
	* include/avr/iom16a.h: Add backwards-compatible USART
	interrupt vector names.

2011-05-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Palauqui Georges:
	patch #7531: Bad name of bit in TCCR0A : WGM0 instead of CTC0
	for ATtinyX61
	* include/avr/iotnx61.h: Add new name CTC0 for bit 0 of
	TCCR0A.

2011-05-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Markus Lampert:
	* include/avr/iousbxx2.h: Add new names for CLKSTA, CLKSEL0,
	CLKSEL1 (old names have been without the `L').

2011-05-12  Eric B. Weddington  <eric.weddington@atmel.com>

	Patch #7226. Thanks to Avik Juneja for the patch.
	* include/avr/iom8u2.h: Add UPOE register definition and bits.
	* include/avr/power.h: Add ATmega8u2-16u2-32u2 devices in conditional.
	* NEWS: Add to contributed patches list.

2011-05-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #33130. Thanks to Antoine Mercier-Linteau for the patch.
	* doc/examples/twitest/twitest.c: Check for reception of NAK.
